scripts/teams/zerg/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zerg-http-route
  namespace: zerg
spec:
  parentRefs:
  - name: ext-gateway
    namespace: platform
    sectionName: http-8080
  hostnames:
  - "zerg.example.com"
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: nginx
      port: 8080
      weight: 100
